alignment fix

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -8,6 +8,7 @@
   }
   #contact,
   #projects {
+    margin-top: 150px;
     height: fit-content;
   }
 }
